[build-system]
# maturin is the standard build backend for Rust/Python extension modules (PyO3).
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "ranger"
version = "0.1.0"
description = "{{description}}"
readme = "README.md"
authors = [{ name = "aaronberkhoff" }]
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/aaronberkhoff/{{project_name}}"
Repository = "https://github.com/aaronberkhoff/{{project_name}}"
Documentation = "https://aaronberkhoff.github.io/{{project_name}}"

[tool.maturin]
# Uncomment if your Python source lives in a python/ subdirectory.
# python-source = "python"

# pyo3/extension-module is required when building a .so / .pyd extension.
# Remove this line if you are building a standalone binary wheel instead.
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes (unused imports, undefined names)
    "I",  # isort (import ordering)
    "N",  # pep8-naming (snake_case, PascalCase, UPPER_CASE)
    "UP", # pyupgrade (modern Python syntax)
    "B",  # flake8-bugbear (common bugs and design issues)
]
ignore = [
    "E501", # line length — handled by ruff-format
]

[dependency-groups]
docs = [
    # Pin below 2.0 — MkDocs 2.0 removes the plugin system and breaks all themes.
    "mkdocs>=1.5.0,<2.0",
    "mkdocs-material>=9.1.18",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-llmstxt>=0.2.0",
    "mdformat>=0.7.17",
    "mdformat-mkdocs>=2.0.4",
]
dev = [
    { include-group = "docs" },
    "pytest>=8",
    "maturin>=1,<2",
    "pre-commit>=4",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.pyright]
# Match the minimum Python version declared in [project].
pythonVersion = "3.12"
typeCheckingMode = "basic"
